# aura

./: .gitignore  README.md  index.html  package-lock.json  package.json
.beads/: metadata.json
.github/workflows/: publish.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  error.rs  indexer.rs  intent.rs  lib.rs  main.rs  search.rs  tests.rs
src/components/: ResultItem.tsx  ResultList.tsx  SearchBar.tsx
src/hooks/: useSearch.ts
src/styles/: globals.css
