[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[lib]
name = "aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
fuzzy-matcher = "0.3"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
